# text-prediction-analysis

./: .gitignore  Cargo.toml
results/: chars.txt  corpus.txt  sentence-starter-chars.txt  word-starter-chars.txt  words.txt
src/: completion.rs  corpus.rs  correction.rs  main.rs  plot_chars.py  plot_words.py  prediction.rs  server.rs
