[package]
name = "text-analysis"
version = "0.1.0"
authors = ["johannesvollmer <johannes.boenki@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-interner = "0.7.1"
walkdir = "2.3.1"
rayon = "1.3.0"

patricia_tree = "0.1.9"
rust-bert = "0.7.2"
tiny_http = "0.7.0"
levenshtein = "1.0.4"

serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"

[profile.dev]
#lto = true
#codegen-units = 1
opt-level = 3
